--- a/includes/style.css
+++ b/includes/style.css
@@ -509,7 +509,10 @@ label.badPickLbl {
 	background-color:white;
 	max-width:60em;
 }
-.secHead{background-color:lightgrey;}
+.secHead{
+	background-color:lightgrey;
+	background-color:#D5D5DB;
+}
 .secLabel{
 	float:left;
 	font-weight:bold;
@@ -602,7 +605,7 @@ td#SDCellRight{
 .headerCollectionText {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:24px;
-	color:#000066;
+	color:#94131C;
 }
 .annotateSpace, .annotateSpace a:visited .annotateSpace a {
 	font-size:.75em;
@@ -731,7 +734,9 @@ redCheck{
 	}
 .browseLink {
 	cursor:pointer;
-	color: blue;}
+	color: blue;
+	color:#114bc7;	
+}
 .browseLink:hover {
 	text-decoration: underline;
 	color: #CC0000;
@@ -986,8 +991,9 @@ input.lnkBtn {
 	font-weight:bold;
 	font-family: Arial, Helvetica, sans-serif;
 	background-color:#99CCFF;
-	border-color: #336666;
-	border:1px solid;}
+	border:1px solid #336666;
+	padding: 1px 2px;
+}
 .controlButton:hover, input.qutBtn:hover, input.delBtn:hover, input.picBtn:hover, input.clrBtn:hover, input.lnkBtn:hover, input.schBtn:hover, input.insBtn:hover,input.savBtn:hover {
 	border-color:#FF6633;
 	cursor:pointer;
@@ -998,8 +1004,8 @@ input.schBtn {
 	font-weight:bold;
 	font-family:Arial, Helvetica, sans-serif;
 	background-color:#CCCC99;
-	border-color:#336666;
-	border:1px solid;}
+	border:1px solid #336666;
+}
 
 input.clrBtn {
 	color:	#666666;
@@ -1039,7 +1045,7 @@ input.qutBtn {
 	border-color: #336666;
 	border:1px solid;}
 input.reqdClr, select.reqdClr, textarea.reqdClr {
-   background-color:#FFFF33; }
+   background-color:#E4E476; }
 input.badPick, select.badPick, textarea.badPick {
 	background-color:#FF3366;}
 input.goodPick, select.goodPick, textarea.goodPick {
@@ -1144,9 +1150,12 @@ ul.sf-menu li li li.sfHover ul {
 }
 .sf-menu a, .sf-menu a:visited  { /* visited pseudo selector so IE6 applies text colour*/
 	color:			#0000FF;
+	color: #114bc7;
 }
 .sf-menu li {
 	background:		#E7E7E7;
+	background:		#dddddd;
+	padding-right: 2px;
 }
 .sf-menu li li {
 	background:		#E7E7E7;
@@ -1219,6 +1228,7 @@ li.sfHover > a > .sf-sub-indicator {
 	font-size:small;
 	font-weight:400;
 	background:#E7E7E7;
+	background:#D5D5DB;
 	border-top:1px solid white;
 }
 /************************ dropdown taxonomy results *****************************/
@@ -1247,6 +1257,7 @@ padding: 2px 3px;
 
 div.submenu h2 {
 color: #0000FF;
+color: #114bc7;
 background:url(/images/small-black-down-arrow.gif) no-repeat 100% 100%;
 cursor:pointer;
 }
