ISSUE: MCZ redmine 3 PURPOSE: Committing reviewed Media(Image)Set functionality to display a set of related images in an image zoom browser. DESCRIPTION: Removing MediaDetail.cfm, replacing with MediaSet.cfm (linked in from Specimen Details and from (the media details view in) MediaSearch.  Adding (from Michelle) mediacontain.css containing styles for the div based layout in MediaSet, along with updates to the included header file imageInclude.cfm, and minimal required edits to multizoom.css.  MediaSet.cfm works for most cases of MCZ specimen images, but has issues for a few problem cases (listed in 3#note-11).  MediaSet currently supports sets of images related to specimens and agents, straightforward to extend to localities and collecting events.

--- a/arctos/branches/mcz_version/includes/js/multizoom/multizoom.css
+++ b/arctos/branches/mcz_version/includes/js/multizoom/multizoom.css
@@ -37,7 +37,11 @@
 	border-width: 0; /* avoid default borders in some browsers */
 }
 
+/*
+ * Local change: description to multizoomdescription to disambiguate from mczstyles  
 #description, #description2 {
+*/
+#multizoomdescription, #multizoomdescription2 {
 	position: absolute; /* required for description folows image bottom (descpos: true) */
 	width: 325px; /* should be width of zoomable image container (.targetarea) */
 	text-align: center;
