--- a/includes/js/multizoom/multizoom.css
+++ b/includes/js/multizoom/multizoom.css
@@ -37,7 +37,11 @@
 	border-width: 0; /* avoid default borders in some browsers */
 }
 
+/*
+ * Local change: description to multizoomdescription to disambiguate from mczstyles  
 #description, #description2 {
+*/
+#multizoomdescription, #multizoomdescription2 {
 	position: absolute; /* required for description folows image bottom (descpos: true) */
 	width: 325px; /* should be width of zoomable image container (.targetarea) */
 	text-align: center;
