--- a/includes/style.css
+++ b/includes/style.css
@@ -363,8 +363,8 @@ label.badPickLbl {
 	display:block;
 }
 .browserCheck {
-	text-align:center;
-	border:1px dotted #CC0000;
+	text-align:left;
+	/*border:1px dotted #CC0000;*/
 	font-size:smaller;	
 }
 .goodPW {
@@ -625,7 +625,7 @@ td#SDCellRight{
 	color:#2B547E;
 	float:right;
 	cursor:pointer;
-	font-family:Arial, Helvetica, sans-serif;}
+	font-family:Arial, Helvetica, sans-serif;
 }
 .annotateSpace:hover {
 	color:#FF0000;
@@ -734,7 +734,7 @@ span.helpDiv{
     color:#0000FF;
     text-decoration:none;}
 .red {background-color:#FF0000;}
-redCheck{
+.redCheck{
 	border: 5px solid red;}
 .infoLink ,.infoLink a:visited {
 	cursor:pointer;
