Loan layout changes
Changes the misnamed addItems section (aka Search/Find Loans) of the
Loan.cfm page.  The not closed loan button initiated this.  It was on
the far right of the page.

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1086,3 +1086,64 @@ div.updatedAtom p {
 /* added styles */
 #loan {}
 .page_title h1 {font-size: 25px;}
+
+
+/* added styles for loans */
+#loan {width: 700px;margin: 0 0 30px 62px;border-right: 2px solid #ebebeb;padding-right: 33px;}
+.page_title {float:left;}
+.page_title h1 {font-size: 25px;margin-left: 64px;height: 42px; text-align:bottom;}
+.page_title h1 img.likebox {vertical-align:top; width:16px;}
+#loan .lnum input {width: 120px;}
+.open_loans {float:right; display: inline;margin: 3em  50px 1.5em 0px;}
+.partLoan {margin-top: 2em;}
+.parts1 {text-align:right;vertical-align: top; padding-top: 1em;}
+#loan td .schBtn {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #666;
+padding: 2px 5px;
+cursor:pointer;
+}
+#loan td .schBtn:hover {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #FF0000;
+padding: 2px 5px;
+cursor:pointer;
+}
+#loan .open_loans input.schBtn {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #666;
+padding: 3px 5px;
+cursor:pointer;
+}
+#loan .open_loans input.schBtn:hover {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #FF0000;
+padding: 3px 5px;
+cursor:pointer;
+}
+
+#loan td .qutBtn {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #666;
+padding: 2px 5px;
+cursor:pointer;
+}
+#loan td .qutBtn:hover {
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 2px solid #444;
+padding: 2px 5px;
+cursor:pointer;
+}
+/* end additional styles for loans */
