--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1160,6 +1160,9 @@ section header {
 	margin: 0 0 0 10px;
 	padding: 0;
 	font-size: .85em;
+	border-bottom: 3px solid #E4E476;
+	width: 8em;
+	text-align:center;
 }
 header .download {
 	background-color: #99cc99;
