added a wiki link
Put the link to the wiki from the h2 title on publication/project search
page (SepcimenUsage.cfm) and corresponding styles
(includes/css/mcz_styles.css).

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -485,6 +485,22 @@ h2 {
 	font-size: 1.6em;
 	font-weight: bold;
 }
+h2.wikilink {
+	width: 40%;
+	float: left;
+	margin-bottom: .15em;
+	margin-top: 1.5em;
+	margin-left: .15em;
+	line-height: 1em;
+}
+h2.wikilink span {
+	font-style: italic;
+	font-size: smaller;
+}
+h2.wikilink img {
+	vertical-align: top;
+	margin-top: -7px
+}
 table.sortable a.sortheader {
 	background-color: #eee;
 	color: #666666;
