--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -501,6 +501,7 @@ h2.wikilink img {
 	vertical-align: top;
 	margin-top: -7px
 }
+
 table.sortable a.sortheader {
 	background-color: #eee;
 	color: #666666;
@@ -1327,3 +1328,4 @@ ul.lisc li {
 }
 
 /* end additional styles for loans */  
+.cellDiv {width: 97%;}
