--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1345,3 +1345,4 @@ ul.lisc li {
 
 /* end additional styles for loans */  
 .cellDiv {width: 97%;}
+.greenbox {border:2px solid green;margin:1px;padding:1px;}
