infoLink box move
trying to get the infoLink box to move up so it is more like an exponent

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -497,7 +497,7 @@ h2.wikilink span {
 	font-style: italic;
 	font-size: smaller;
 }
-h2.wikilink img {
+h2.wikilink img.infoLink {
 	vertical-align: top;
 	margin-top: -7px
 }
