--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1346,14 +1346,80 @@ ul.lisc li {
 /* end additional styles for loans */  
 .cellDiv {width: 97%;}
 .greenbox {border:2px solid green;margin:1px;padding:2px;margin-bottom: 20px;}
+
+/**************NEW STYLES --Centering--- *********************/
+
 #pg_container {
 	width: 100%;
 	margin: 0;	
 }
 .content_box {
-	width:72.5%;
+	width:57em;
 	margin: 0 auto;
 }
 .content_box table {
 	width: 100%;
+
 }
+#headerContent {
+	width: 100%;
+	background-color: #b4ab85;
+	background-color: #ccc;
+	border-bottom: 1px solid #ccc;
+	position: relative;
+}
+
+#image_headerWrap {
+	width: 57em;
+	margin: 0 auto;
+	padding: 0;
+	overflow: hidden;
+	position:relative;
+}
+#image_headerWrap .headerImageCell img {
+	padding: 0;
+	float: left;
+	width: 250px;
+	height: 58px;
+	display: inline;
+	padding: .5em .5em 1em .5em;
+}
+
+#image_headerWrap .headerText h1{
+	float: left;
+	width: 30em;
+	display: inline;
+	margin-top: .5em;
+}
+#headerWrap {
+	height: 21px;
+	width: 62em;
+	background-color: #e8eef3;
+	border-bottom: 2px solid #e8eef3;
+}
+h1.headerCollectionText {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	color: #660000;
+}
+span.headerInstitutionText {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #000066;
+	font-weight: bold;
+	margin-top: 5px;
+	display: block;
+	font-size: 18px;
+}
+a:hover.headerCollectionText {
+	text-decoration: none;
+	color: #cc0000;
+}
+.headerCollectionTextSmall {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 19px;
+}
+.sf-menu {
+	width: 100%;	
+}
+
+
