tweaking of style (header)
shifted menu, added border, and changed width;
changed header color

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1364,7 +1364,7 @@ ul.lisc li {
 #headerContent {
 	width: 100%;
 	background-color: #b4ab85;
-	background-color: #ccc;
+	background-color: #d3d3d3;
 	border-bottom: 1px solid #ccc;
 	position: relative;
 }
