header image padding left
added padding

--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1383,7 +1383,7 @@ ul.lisc li {
 	width: 250px;
 	height: 58px;
 	display: inline;
-	padding: .5em .5em 1em .5em;
+	padding: .5em .5em 1em 1.5em;
 }
 
 #image_headerWrap .headerText h1{
