--- a/includes/css/mcz_style.css
+++ b/includes/css/mcz_style.css
@@ -1367,7 +1367,7 @@ ul.lisc li {
 	margin: 0 auto;
 	margin-bottom: 1em;
 }
-.content_box_pub table{border: 1px solid green;padding-bottom: 1em; }
+.content_box_pub table{border: 1px solid green; }
 .content_box_pub select, .content_box_pub input {width: 180px;margin-left: 2em;}
 .content_box_pub h4, .content_box_pub label  {margin-left: 2em;}
 .content_box_pub label {margin: .5em 0 0 2.3em;}
