footer and header syncing
The header and footer have open and close div for the main body of the
pages.  < pg_container and content_box >

--- a/includes/style.css
+++ b/includes/style.css
@@ -1230,9 +1230,9 @@ li.sfHover > a > .sf-sub-indicator {
 	background: transparent;
 }
 .sf-mainMenuWrapper { 
-	clear:left;
+/*	clear:left;
 	float:left;
-	width:100%;
+	width:100%;*/
 	font-size:small;
 	font-weight:400;
 	background:#E7E7E7;
