--- a/includes/style.css
+++ b/includes/style.css
@@ -3771,7 +3771,7 @@ td.lbl {
 	display: block;
 	padding: 0;
 	font-size: .95em;
-	margin: .7em .5em .7em 0;
+	margin: .7em .5em .7em 1em;
 }
 .innerDetailLabel {
 	color: #000000;
