--- a/includes/style.css
+++ b/includes/style.css
@@ -3957,10 +3957,10 @@ table.specResultTab td:nth-child(2) {
  height: 1.5em
 }
 ::-webkit-scrollbar-button {
- background: #666
+ background: #666;
 }
 ::-webkit-scrollbar-track-piece {
- background: #ccc
+ background: #ccc;
 }
 ::-webkit-scrollbar-thumb, ::-moz-scrollbar-thumb {
  background: lightblue;
