--- a/includes/style.css
+++ b/includes/style.css
@@ -5505,7 +5505,7 @@ ul.return_links li {
 	width: auto;
 	float: left;
 	font-size: 10px;
-	margin: .25em 1em .25em 0;
+	margin: .25em 0 .25em 0;
 	font-size: 12px;
 }
 ul.id_meta {
