--- a/includes/style.css
+++ b/includes/style.css
@@ -5488,7 +5488,7 @@ ul.headercol3 li {
 	font-size: .85em;
 	color: gray;
 }
-.taxaEdit input {width: 300px;}
+.taxaEdit input.tInput {width: 300px;}
 .commonName {
 	margin: .25em;
 	padding: 0;
