local style change
userdataForm

--- a/includes/style.css
+++ b/includes/style.css
@@ -5488,7 +5488,7 @@ ul.headercol3 li {
 	font-size: .85em;
 	color: gray;
 }
-.userData label {margin-top: .5em;}
+.userdataForm label {margin-top: .5em;}
 .taxaDetailsbox {width: 54em; margin: 0 auto; padding-bottom: 2em;}
 .taxaDetailsbox li {margin-left: 1.5em;}
 .taxaDetailsbox p {margin-top: .5em;}
