--- a/includes/style.css
+++ b/includes/style.css
@@ -1243,6 +1243,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul {
 .sf-menu {
 	float: left;
 	margin-bottom: .1em;
+	font-size: 14px;
 }
 .sf-menu a {
 	border-left: 1px solid #fff;
